this sort of works, but is outdated

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "github",
     "googlepagespeed"
   ],
-  "homepage": "https://github.com/bdavidxyz/yourown-bootstrap4/"
+  "homepage": "https://github.com/bdavidxyz/yourown-bootstrap4/",
+  "dependencies": {
+    "bootstrap": "4.0.0-beta"
+  }
 }
